--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,10 +16,10 @@
   -->
 <resources>
 
-    <string name="app_name">Cast Videos Sample</string>
-    <string name="app_id">4F8B3483</string>
+    <string name="app_name">WristPlayer</string>
+    <string name="app_id">B642A480</string>
     <string name="action_settings">Settings</string>
-    <string name="cast_app_name">GoogleCastPlayer</string>
+    <string name="cast_app_name">WristPlayer Cast</string>
     <string name="media_route_menu_title">Play on&#8230;</string>
     <string name="list_of_videos">Select a Video Clip</string>
     <string name="ok">OK</string>
@@ -31,7 +31,7 @@
     <string name="loading">Loading&#8230;</string>
     <string name="no_video_found">No video was found</string>
     <string name="about_app">About Cast Videos</string>
-    <string name="version">CastVideos: %1$s</string>
+    <string name="version">WristPlayer: %1$s</string>
     <string name="session_reconnection_attempt">Attempting to recover previous
         session&#8230;</string>
     <string name="introducing_cast">Introducting Cast</string>
@@ -100,4 +100,12 @@
     <string name="action_clear_queue">Clear Queue</string>
     <string name="queue_item_added_to_play_next">An item was added to play next</string>
     <string name="queue_item_added_to_queue">An item was added to the queue</string>
+
+    <!-- MDDTW -->
+    <string name="action_set_template">Set as template</string>
+    <string name="action_mddtw">Compare with Template</string>
+    <string name="your_comment">Enter template name:</string>
+    <string name="send">Save</string>
+    <string name="text_input_name">Type the new template name:</string>
+    <string name="template_name_tip">name_template.json</string>
 </resources>
